# office

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml  docker-ghcr.yml
api/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  bun.lockb  diesel.toml  package-lock.json  package.json  tsconfig.json
api/migrations/2024-04-02-005445_create_users/: up.sql
api/src/: app.ts  application.rs  domain.rs  index.ts  infra.rs  main.rs  mikro-orm.config.ts  routes.ts  state.ts  util.ts
api/src/@types/fastify/: index.d.ts
api/src/application/: user.rs
api/src/domain/: document.rs  document.ts  email.ts  password.ts  session.rs  session.ts  user.rs
api/src/domain/document/: access.ts  document.ts
api/src/domain/form/: evaluation.ts  form.ts  question.ts  report.ts
api/src/domain/user/: email.ts  session.ts  user.ts
api/src/infra/: db.rs  password.ts  resend.ts  router.rs  schema.rs
api/src/infra/db/: document.ts  entities.ts  orm.ts  user.rs  user.ts
api/src/infra/router/: document.rs  user.rs
api/src/infra/routes/: routes.ts
api/src/infra/routes/v1/: document.ts  swagger.ts  v1.ts
api/src/infra/routes/v1/form/: complete.ts  form.ts  manage.ts
api/src/infra/routes/v1/user/: account.ts  session.ts  user.ts
api/src/plugins/: sensible.ts
api/src/routes/: root.ts
api/test/plugins/: support.test.ts
api/test/routes/: example.test.ts  root.test.ts
docs/: Dockerfile  pages.json
proxy/: Caddyfile
storage/: Cargo.toml  Dockerfile
storage/src/: main.rs
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+17 files in other folders)
