[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = "0.3.18"
diesel = { version = "2.1", features = ["postgres", "uuid", "r2d2"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
async-trait = "0.1.79"
argon2 = "0.5.3"
anyhow = "1.0.81"
rand = "0.8.5"
